tests/baselines/reference/moduleNoneErrors.errors.txt
error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(1,14): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


!!! error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    export class Foo {
                 ~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
        foo: string;
    }
    